auto-test/tests/chapter_18/valid/extra_credit/semantic_analysis/redeclare_union.c

int main(void) {
    union u {
        int a;
    };

    union u; 

    union u my_union = {1};
    return my_union.a;
}