auto-test/tests/chapter_18/invalid_types/extra_credit/incomplete_unions/sizeof_incomplete_union_type.c


int main(void) {
    union u;
    return sizeof(union u);  
}